--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     -->
     <title>Nyammm Recipe App</title>
   </head>
+  <!-- added background color to the page, it was the simplest way to do it -->
   <body style="background-color:rgba(200, 255, 0, 0.067);"></body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
